src/test/ui/issues/issue-17431-7.stderr
error[E0072]: recursive type `Foo` has infinite size
  --> $DIR/issue-17431-7.rs:1:1
   |
LL | enum Foo { Voo(Option<Option<Foo>>) }
   | ^^^^^^^^       ------------------- recursive without indirection
   | |
   | recursive type has infinite size
   |
help: insert some indirection to make `Foo` representable
   |
LL | enum Foo { Voo(Box<Option<Option<Foo>>>) }
   |                ^^^^                   ^
LL | enum Foo { Voo(Rc<Option<Option<Foo>>>) }
   |                ^^^                   ^
LL | enum Foo { Voo(&Option<Option<Foo>>) }
   |                ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
